--- a/public/index.html
+++ b/public/index.html
@@ -62,10 +62,11 @@
     <script src="https://kit.fontawesome.com/f72f95dbc9.js" crossorigin="anonymous"></script>
 
     <!-- include firebase sdk -->
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-analytics.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.4.3/firebase-database.js"></script>
+    <script src="/__/firebase/8.4.3/firebase-app.js"></script>
+    <script src="/__/firebase/8.4.3/firebase-app.js"></script>
+    <script src="/__/firebase/8.4.3/firebase-auth.js"></script>
+    <script src="/__/firebase/8.4.3/firebase-database.js"></script>
+    <script src="/__/firebase/8.4.3/firebase-firestore.js"></script>
 
     <!-- costum js -->
     <script src="static/js/firebase-config.js"></script>
